continued NY market analysis, added descriptions in markdown

--- a/art_eda.ipynb
+++ b/art_eda.ipynb
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This indicates that there are some standout artists that sell for very high prices at times, while other artists tend to clump towards less extreme prices. Another way to see trends more clearly may be to visualize the auction appearances and/or the cumulative value of sales for an artist over time."
+    "This isn't quite proper because the adj_sale_price column is not summed properly per year: will be trying to do that further down but it still shows a general picture of the sales per year that particular artists will have. This indicates that there are some standout artists that sell for very high prices at times, while other artists tend to clump towards less extreme prices. Another way to see trends more clearly may be to visualize the auction appearances and/or the cumulative value of sales for an artist over time."
    ]
   },
   {
